--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta  charset="UTF-8">
         <title>El hombre araña ataca de nuevo</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
