se añade contenido

--- a/blog.html
+++ b/blog.html
@@ -8,5 +8,6 @@
         <h1>Titular del año</h1>
         <p>El hombre araña ataca de nuevo</p>
         <p>-jj jhonson</p>
+        <p>La amenaza aracnida ataca de nuevo <br>Esta vez la nueva victima son todos <br>los habitantes de nueva york</p>
     </body>
 </html>
