--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Titular del año</h1>
-        <p>El hombre araña ataca de nuevo</p>
-        <p>-jj jhonson</p>
+        <div id="container">
+            <h1>Titular del año</h1>
+            <p>El hombre araña ataca de nuevo</p>
+            <p>-jj jhonson</p>
+        </div>
         <p>La amenaza aracnida ataca de nuevo <br>Esta vez la nueva victima son todos <br>los habitantes de nueva york</p>
     </body>
 </html>
