primeros pasos de la cabecera

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <h1>Titular del año</h1>
             <p>El hombre araña ataca de nuevo</p>
             <p>-jj jhonson</p>
