Contenido agregado, otro color

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,15 @@
             <p>El hombre araña ataca de nuevo</p>
             <p>-jj jhonson</p>
         </div>
-        <p>La amenaza aracnida ataca de nuevo <br>Esta vez la nueva victima son todos <br>los habitantes de nueva york</p>
+        <p>La amenaza aracnida ataca de nuevo <br>
+            Esta vez la nueva victima son todos <br>
+            los habitantes de nueva york
+        </p>
+        <p>
+            El infame hombre araña se atrevio a 
+            interrumpir la cena de gala del delegado
+            de seguridad en compañia de su compañero
+            del crimen, el duende verde
+        </p>
     </body>
 </html>
