--- a/blog.html
+++ b/blog.html
@@ -13,15 +13,17 @@
             <p>El hombre araña ataca de nuevo</p>
             <p>-jj jhonson</p>
         </div>
-        <p>La amenaza aracnida ataca de nuevo <br>
-            Esta vez la nueva victima son todos <br>
-            los habitantes de nueva york
-        </p>
-        <p>
-            El infame hombre araña se atrevio a 
-            interrumpir la cena de gala del delegado
-            de seguridad en compañia de su compañero
-            del crimen, el duende verde
-        </p>
+        <div id="parrafos">
+            <p>La amenaza aracnida ataca de nuevo <br>
+                Esta vez la nueva victima son todos <br>
+                los habitantes de nueva york
+            </p>
+            <p>
+                El infame hombre araña se atrevio a <br>
+                interrumpir la cena de gala del delegado <br>
+                de seguridad en compañia de su compañero <br>
+                del crimen, el duende verde. <br>
+            </p>
+        </div>
     </body>
 </html>
