cambio de color en cabecera, todo gris

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                El clarin
+                El blog master
             </div>
             <h1>Titular del año</h1>
             <p>El hombre araña ataca de nuevo</p>
