--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta  charset="UTF-8">
-        <title>El hombre araña ataca de nuevo</title>
+        <title>El hombre araña amenaza al comisionado en cena de gala</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
