Se termino de modificar la cabecera, color de fondo

--- a/blog.html
+++ b/blog.html
@@ -8,9 +8,12 @@
         <div id="container">
             <div id="cabecera">
                 La verdad actual
+                <span id="tagline">Tus noticias al momento</span>
             </div>
             <h1>Titular del año</h1>
-            <p>El hombre araña ataca de nuevo</p>
+            <hr>
+            <br>
+            <p id="subtitulo">El hombre araña ataca de nuevo</p>
             <p>-jj jhonson</p>
         </div>
         <div id="parrafos">
@@ -18,6 +21,7 @@
                 Esta vez la nueva victima son todos <br>
                 los habitantes de nueva york
             </p>
+            <hr>
             <p>
                 El infame hombre araña se atrevio a <br>
                 interrumpir la cena de gala del delegado <br>
