--- a/blog.html
+++ b/blog.html
@@ -25,5 +25,10 @@
                 del crimen, el duende verde. <br>
             </p>
         </div>
+        <div id="footer">
+            <p>
+                Redactado para diario el Clarin
+            </p>
+        </div>
     </body>
 </html>
