Correccion de nombre de autor

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
             <hr>
             <br>
             <p id="subtitulo">El hombre araña ataca de nuevo</p>
-            <p>-jj jhonson</p>
+            <p>-J.J. Jhonson</p>
         </div>
         <div id="parrafos">
             <p>La amenaza aracnida ataca de nuevo <br>
