Correccion de punto y coma en entidades HTML

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
         </div>
         <div id="parrafos">
             <p>La amenaza aracnida ataca de nuevo <br>
-                Esta v&eacutez la nueva victima son todos <br>
+                Esta v&eacute;z la nueva victima son todos <br>
                 los habitantes de nueva york
             </p>
             <hr>
@@ -31,7 +31,7 @@
         </div>
         <div id="footer">
             <p>
-                Redactado para diario el Clar&iacuten
+                Redactado para diario el Clar&iacute;n
             </p>
         </div>
     </body>
