Correccion de mayusculas y ntilde

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta  charset="UTF-8">
-        <title>El hombre araña amenaza al comisionado en cena de gala</title>
+        <title>El hombre ara&ntilde;a amenaza al comisionado en cena de gala</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
@@ -13,19 +13,19 @@
             <h1>Titular del año</h1>
             <hr>
             <br>
-            <p id="subtitulo">El hombre araña ataca de nuevo</p>
+            <p id="subtitulo">El hombre ara&ntilde;a ataca de nuevo</p>
             <p>-J.J. Jhonson</p>
         </div>
         <div id="parrafos">
             <p>La amenaza aracnida ataca de nuevo <br>
                 Esta v&eacute;z la nueva victima son todos <br>
-                los habitantes de nueva york
+                los habitantes de Nueva York
             </p>
             <hr>
             <p>
-                El infame hombre araña se atrevio a <br>
+                El infame hombre ara&ntilde;a se atrevio a <br>
                 interrumpir la cena de gala del delegado <br>
-                de seguridad en compañia de su compañero <br>
+                de seguridad en compa&ntilde;ia de su compa&ntilde;ero <br>
                 del crimen, el duende verde. <br>
             </p>
         </div>
