Cambio de title

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta  charset="UTF-8">
-        <title>El hombre ara&ntilde;a amenaza al comisionado en cena de gala</title>
+        <title>Diario El Clar&iacute;n</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
