Se agrego la imagen que evidencia al hombre araña quemando la gala

--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,10 @@
                 los habitantes de Nueva York
             </p>
             <hr>
+            <p id="spidy">
+                <img src="https://i.imgur.com/90cyEUc.jpeg" width="50%">
+            </p>
+            <hr>
             <p>
                 El infame hombre ara&ntilde;a se atrevio a <br>
                 interrumpir la cena de gala del delegado <br>
